# AdventOfCode-2020

./: .gitignore  CMakeLists.txt  CMakeSettings.json
AdventOfCode.2020.Common/: CMakeLists.txt  file.cc  file.h  trim.cc  trim.h
AdventOfCode.2020.Day1/: CMakeLists.txt  report_repair.cc  report_repair_part_1_brute_force.cc  report_repair_part_1_brute_force.h  report_repair_part_1_brute_force_tests.cc  report_repair_part_1_optimal.cc  report_repair_part_1_optimal.h  report_repair_part_1_optimal_tests.cc  report_repair_part_2_brute_force.cc  report_repair_part_2_brute_force.h  report_repair_part_2_brute_force_tests.cc  report_repair_part_2_optimal.cc  report_repair_part_2_optimal.h  report_repair_part_2_optimal_tests.cc
AdventOfCode.2020.Day1.ReportRepair/: CMakeLists.txt  report_repair.cc  report_repair_part_1_brute_force.cc  report_repair_part_1_brute_force.h  report_repair_part_1_brute_force_tests.cc  report_repair_part_1_optimal.cc  report_repair_part_1_optimal.h  report_repair_part_1_optimal_tests.cc  report_repair_part_2_brute_force.cc  report_repair_part_2_brute_force.h  report_repair_part_2_brute_force_tests.cc  report_repair_part_2_optimal.cc  report_repair_part_2_optimal.h  report_repair_part_2_optimal_tests.cc
AdventOfCode.2020.Day2/: CMakeLists.txt  password_philosophy.cc  password_philosophy_part_1.cc  password_philosophy_part_1.h  password_philosophy_part_2.cc  password_philosophy_part_2.h
AdventOfCode.2020.Day3/: CMakeLists.txt  toboggan_trajectory.cc  toboggan_trajectory_part_1.cc  toboggan_trajectory_part_1.h  toboggan_trajectory_part_2.cc  toboggan_trajectory_part_2.h
AdventOfCode.2020.Day4/: CMakeLists.txt  passport_processing.cc  passport_processing_part_1.cc  passport_processing_part_1.h  passport_processing_part_2.cc  passport_processing_part_2.h
AdventOfCode.2020.Day5/: CMakeLists.txt  binary_boarding.cc  binary_boarding_part_1.cc  binary_boarding_part_1.h  binary_boarding_part_2.cc  binary_boarding_part_2.h
AdventOfCode.2020.Day6/: CMakeLists.txt  custom_customs.cc  custom_customs_part_1.cc  custom_customs_part_1.h  custom_customs_part_2.cc  custom_customs_part_2.h
